; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1559.c_getint.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1559.c_getint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getint(i32* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = bitcast i32* %9 to i8*
  %11 = load i8, i8* %10, align 1
  %12 = sext i8 %11 to i32
  store i32 %12, i32* %6, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = getelementptr inbounds i32, i32* %13, i32 1
  store i32* %14, i32** %4, align 8
  %15 = load i32, i32* %6, align 4
  %16 = icmp eq i32 %15, -128
  br i1 %16, label %17, label %33

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = getelementptr inbounds i32, i32* %18, i32 1
  store i32* %19, i32** %4, align 8
  %20 = load i32, i32* %18, align 4
  store i32 %20, i32* %7, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = bitcast i32* %21 to i8*
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = shl i32 %24, 8
  %26 = load i32, i32* %7, align 4
  %27 = or i32 %26, %25
  store i32 %27, i32* %7, align 4
  %28 = load i32*, i32** %4, align 8
  %29 = getelementptr inbounds i32, i32* %28, i32 1
  store i32* %29, i32** %4, align 8
  %30 = load i32*, i32** %4, align 8
  %31 = load i32**, i32*** %5, align 8
  store i32* %30, i32** %31, align 8
  %32 = load i32, i32* %7, align 4
  store i32 %32, i32* %3, align 4
  br label %64

33:                                               ; preds = %2
  %34 = load i32, i32* %6, align 4
  %35 = icmp eq i32 %34, -127
  br i1 %35, label %36, label %60

36:                                               ; preds = %33
  %37 = load i32*, i32** %4, align 8
  %38 = getelementptr inbounds i32, i32* %37, i32 1
  store i32* %38, i32** %4, align 8
  %39 = load i32, i32* %37, align 4
  store i32 %39, i32* %8, align 4
  %40 = load i32*, i32** %4, align 8
  %41 = getelementptr inbounds i32, i32* %40, i32 1
  store i32* %41, i32** %4, align 8
  %42 = load i32, i32* %40, align 4
  %43 = shl i32 %42, 8
  %44 = load i32, i32* %8, align 4
  %45 = or i32 %44, %43
  store i32 %45, i32* %8, align 4
  %46 = load i32*, i32** %4, align 8
  %47 = getelementptr inbounds i32, i32* %46, i32 1
  store i32* %47, i32** %4, align 8
  %48 = load i32, i32* %46, align 4
  %49 = shl i32 %48, 16
  %50 = load i32, i32* %8, align 4
  %51 = or i32 %50, %49
  store i32 %51, i32* %8, align 4
  %52 = load i32*, i32** %4, align 8
  %53 = load i32**, i32*** %5, align 8
  store i32* %52, i32** %53, align 8
  %54 = load i32, i32* %8, align 4
  %55 = load i32*, i32** %4, align 8
  %56 = getelementptr inbounds i32, i32* %55, i32 1
  store i32* %56, i32** %4, align 8
  %57 = load i32, i32* %55, align 4
  %58 = shl i32 %57, 24
  %59 = or i32 %54, %58
  store i32 %59, i32* %3, align 4
  br label %64

60:                                               ; preds = %33
  %61 = load i32*, i32** %4, align 8
  %62 = load i32**, i32*** %5, align 8
  store i32* %61, i32** %62, align 8
  %63 = load i32, i32* %6, align 4
  store i32 %63, i32* %3, align 4
  br label %64

64:                                               ; preds = %60, %36, %17
  %65 = load i32, i32* %3, align 4
  ret i32 %65
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
